--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build-babel": "babel -d ./build ./src -s",
     "build": "npm run clean && npm run build-babel",
     "start": "npm run build && node ./build/app.js",
-    "start-dev": "cross-env NODE_ENV=development nodemon --exec babel-node ./src/app.js",
+    "dev": "cross-env NODE_ENV=development nodemon --exec babel-node ./src/app.js",
     "test": "cross-env NODE_ENV=test && npm run migration && npm run seeder && nyc --require --reporter=html --reporter=text mocha -r @babel/register ./src/tests/index.js --timeout 50000 --recursive --exit || true ",
     "coverage": "nyc npm run test && nyc report --reporter=text-lcov --reporter=lcov | node ./node_modules/coveralls/bin/coveralls.js --verbose",
     "lint": "eslint src/  --fix",
@@ -52,7 +52,6 @@
     "@babel/register": "^7.13.14",
     "@babel/runtime": "^7.13.10",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.2",
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
     "cookie-session": "^1.4.0",
@@ -62,7 +61,7 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsdoc": "^32.3.0",
-    "moch": "0.0.1",
+    "mocha": "^8.3.2",
     "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^2.0.7",
     "nyc": "^15.1.0",
