--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A RESTful API that supports the posts functionality of Facebook.",
   "main": "app.js",
   "engines": {
-    "node": "14.x"
+    "node": "14.16.0"
   },
   "scripts": {
     "clean": "npm rm -rf build && npm run build-babel",
